--- a/bash/config
+++ b/bash/config
@@ -1,4 +1,9 @@
-export PS1="\w$ "
+parse_git_branch() {
+    git branch 2> /dev/null | sed -e '/^[^*]/d' -e 's/* \(.*\)/(\1)/'
+}
+
+export PS1="\w\$(parse_git_branch) $ "
+
 export LC_CTYPE=en_US.UTF-8
 export EDITOR="mate -w"
 export GEMDIR=`gem env gemdir`
