--- a/bash/config
+++ b/bash/config
@@ -7,3 +7,5 @@ export PS1="\w\$(parse_git_branch) $ "
 export LC_CTYPE=en_US.UTF-8
 export EDITOR="mate -w"
 export GEMDIR=`gem env gemdir`
+
+export GIT_EXTERNAL_DIFF=~/.bash/git/merge.sh
