--- a/bash/config
+++ b/bash/config
@@ -8,4 +8,12 @@ export LC_CTYPE=en_US.UTF-8
 export EDITOR="mate -w"
 export GEMDIR=`gem env gemdir`
 
-export GIT_EXTERNAL_DIFF=~/.bash/git/merge.sh
+if [ -f /opt/local/bin/gdircolors ]; then
+    eval $(/opt/local/bin/gdircolors -b ~/.bash/DIR_COLORS)
+fi
+
+if [[ ${EUID} == 0 ]] ; then
+	PS1="\[\033[01;31m\]\h\[\033[01;34m\] \W \[\033[00m\] "
+else
+	PS1="\[\033[01;34m\]\w \[\033[01;32m\]\$(parse_git_branch) \$\[\033[00m\] "
+fi
